--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Wash & Be Wash'd — About</title>
+  <title>ANW — About</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -25,10 +25,46 @@
   </header>
 
   <main>
-    <div class="wip-center">
-      <img src="wip.png" alt="Work in progress illustration" />
-      <div class="wip-text">WORK IN PROGRESS</div>
-    </div>
+    <section class="about-container">
+  <div class="about-photo">
+    <img src="images/portrait_bw.png" alt="A. Newell Walther Portrait">
+  </div>
+  <div class="about-text">
+    <h1>Andrew Newell Walther (b. 1993) is an American artist from the Great State of Alaska. He wrote this bio. He is multidisciplinary, with a primary focus on painting. He is presently working from a studio at the banks of the Saigon River. 
+</h1>
+
+    <h2>c/v</h2>
+
+    <h3>☞ Hitchhiking</h3>
+    <p>
+      <strong>Hitchhiked Roads:</strong><br>
+      Bethel Palmer Knik Whittier: AK<br>
+      I-5 》 I-70 》 I-80 》 I-90 》 I-15 》 I-40 》 I-95 》 I-75 》 I-84 》 I-85 》 I-15 》 I-29 》 I-270 》 I-205 》 I-68 》 I-81 》 I-64 》 I-77 》 I-24 》 I-895 》 I-295 》 I-78 》 US-1 》 US 101 》 US 66 》 NV-95 》 OR-18 》 OR-26 》 PA-43 》 PA-40 》 AK-1 》 AK-2 》 AK-3 》 AK-4 etc. (United States)<br>
+      Yukon 1 》 Dease Hwy 》 Yukon 37 》 BC-37 》 BC-16 》 "the Carribou Connector" 》 Cassiar Hwy 》 Can 1 (Canada)<br>
+      县道/X151 》 552乡道/Y552 》 321国道/G321 etc. (China)<br>
+      A13 》 A-4 》 A17 (Germany)<br>
+      D1 》 E50 》 E65 》 R23 》 E461 》 B7 》 A5 (Czech Republic)<br>
+      Schüttelstraße 》 B227 》 B7 》 A5 》 S2 》 A23 (Austria)
+    </p>
+
+    <h3>☞ Alaska 》 Current: Ho Chi Minh City, Vietnam</h3>
+
+    <h3>☞ Painting</h3>
+    <p><strong>Solo Exhibitions:</strong></p>
+    <ul>
+      <li><em>I-5 S / I-5 N</em><br>INTERSTATE 5 NORTH & SOUTH — British Columbia, Washington, Oregon & California<br>July 8, 2012 – Aug 16, 2016</li>
+      <li><em>Wash & Be Wash’d & With Oil Anointed</em><br>PIPSQUEAK, Seattle, WA<br>Jan 22, 2016 – Mar 1, 2016</li>
+      <li><em>Cool Sun On Display</em><br>PARLIAMENT, Portland, OR<br>Oct 2, 2014 – Nov 2, 2014</li>
+      <li><em>Thy Dross to Consume,... & Thy Gold to Refine</em><br>ON PURPOSE GALLERY, San Rafael, CA<br>Oct 1, 2016 – Oct 31, 2016</li>
+    </ul>
+
+    <h3>☞ Contact</h3>
+    <p>Email: <a href="mailto:Newell.pdx@gmail.com">Newell.pdx@gmail.com</a></p>
+    <img src="images/portrait_bw.png" alt="A. Newell Walther Portrait">
+
+  </div>
+</section>
+
   </main>
 
   <footer>
