Add social media icons to footer across all pages

--- a/index.html
+++ b/index.html
@@ -34,6 +34,34 @@
       <div id="text" class="marquee-text"></div>
     </div>
   </main>
+<body>
+  <!-- Your header/nav here -->
+
+  <main class="flex flex-col items-center text-center p-6">
+    <!-- Globe with rotating text -->
+    <section id="globe-section" class="mb-6">
+      <!-- your globe code here -->
+    </section>
+
+    <!-- Social Media Buttons (Homepage) -->
+    <section class="flex flex-wrap justify-center gap-4 mb-12">
+      <a href="https://instagram.com/newellwalther" target="_blank" rel="noopener noreferrer"
+         class="px-6 py-3 bg-gradient-to-r from-pink-500 to-purple-600 text-white rounded-full shadow-lg hover:scale-105 transition">
+        Instagram
+      </a>
+      <a href="https://twitter.com/newellwalther" target="_blank" rel="noopener noreferrer"
+         class="px-6 py-3 bg-blue-500 text-white rounded-full shadow-lg hover:scale-105 transition">
+        Twitter
+      </a>
+      <a href="https://wa.me/84339441925" target="_blank" rel="noopener noreferrer"
+         class="px-6 py-3 bg-green-500 text-white rounded-full shadow-lg hover:scale-105 transition">
+        WhatsApp
+      </a>
+    </section>
+  </main>
+
+  <!-- Homepage does NOT need footer social links -->
+</body>
 
   <!-- Footer -->
   <footer>
