Refine social media buttons: larger old-school style on homepage, subtle footer icons on other pages

--- a/index.html
+++ b/index.html
@@ -44,18 +44,12 @@
     </section>
 
     <!-- Social Media Buttons (Homepage) -->
-    <section class="flex flex-wrap justify-center gap-4 mb-12">
-      <a href="https://instagram.com/newellwalther" target="_blank" rel="noopener noreferrer"
-         class="px-6 py-3 bg-gradient-to-r from-pink-500 to-purple-600 text-white rounded-full shadow-lg hover:scale-105 transition">
-        Instagram
-      </a>
-      <a href="https://twitter.com/newellwalther" target="_blank" rel="noopener noreferrer"
-         class="px-6 py-3 bg-blue-500 text-white rounded-full shadow-lg hover:scale-105 transition">
-        Twitter
-      </a>
-      <a href="https://wa.me/84339441925" target="_blank" rel="noopener noreferrer"
-         class="px-6 py-3 bg-green-500 text-white rounded-full shadow-lg hover:scale-105 transition">
-        WhatsApp
+    <<div class="social-buttons homepage-social">
+  <a class="social-btn" href="https://instagram.com/newellwalther" target="_blank">📷 Instagram</a>
+  <a class="social-btn" href="https://twitter.com/newellwalther" target="_blank">🐦 Twitter</a>
+  <a class="social-btn" href="https://wa.me/84339441925" target="_blank">💬 WhatsApp</a>
+</div>
+
       </a>
     </section>
   </main>
