--- a/exhibitions.html
+++ b/exhibitions.html
@@ -49,11 +49,14 @@
       </svg>
     </a>
     <!-- WhatsApp -->
-    <a href="https://wa.me/84339441925" target="_blank" rel="noopener noreferrer"
-       class="text-gray-500 hover:text-green-500 transition">
-      <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-        <path d="M20.52 3.48A11.91 11.91 0 0 0 12.04 0C5.39 0 .04 5.34.04 11.98c0 2.115.56 4.17 1.63 5.97L0 24l6.25-1.64a11.93 11.93 0 0 0 5.79 1.47h.01c6.65 0 12-5.34 12-11.98c0-3.2-1.25-6.2-3.53-8.37zM12.04 21.4h-.01c-1.83 0-3.63-.49-5.19-1.41l-.37-.22l-3.71.97l.99-3.62l-.24-.37a9.9 9.9 0 0 1-1.53-5.19c0-5.48 4.47-9.94 9.95-9.94c2.65 0 5.15 1.03 7.02 2.9a9.89 9.89 0 0 1 2.92 7.05c0 5.48-4.47 9.93-9.95 9.93zm5.46-7.47c-.3-.15-1.77-.87-2.04-.97c-.27-.1-.47-.15-.67.15c-.2.3-.77.97-.94 1.17c-.17.2-.35.22-.65.07c-.3-.15-1.27-.47-2.42-1.5c-.89-.79-1.49-1.77-1.67-2.07c-.17-.3-.02-.46.13-.61c.13-.13.3-.35.45-.52c.15-.17.2-.3.3-.5c.1-.2.05-.37-.02-.52c-.07-.15-.67-1.62-.91-2.22c-.24-.57-.48-.5-.67-.5c-.17 0-.37-.02-.57-.02c-.2 0-.52.07-.8.37c-.27.3-1.05 1.03-1.05 2.52s1.08 2.93 1.23 3.13c.15.2 2.08 3.18 5.04 4.46c.7.3 1.25.48 1.68.62c.7.15 1.34.12 1.84.07c.56-.05 1.77-.72 2.02-1.42c.25-.7.25-1.3.18-1.42c-.07-.12-.27-.2-.57-.35z"/>
-      </svg>
+    <a <footer>
+  <div class="social-buttons footer-social">
+    <a class="social-btn" href="https://instagram.com/newellwalther" target="_blank" aria-label="Instagram">📷</a>
+    <a class="social-btn" href="https://twitter.com/newellwalther" target="_blank" aria-label="Twitter">🐦</a>
+    <a class="social-btn" href="https://wa.me/84339441925" target="_blank" aria-label="WhatsApp">💬</a>
+  </div>
+</footer>
+
     </a>
   </div>
 </footer>
