--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
   <!-- Main Globe Section -->
   <main>
     <div class="globe-container">
-      <!-- Globe image -->
-      <img src="images/world-icon-hand-drawn-illustration-editable-line-stroke-vector.jpg" alt="Globe" class="globe">
+      <!-- Globe -->
+      <img src="images/world-icon-hand-drawn-illustration-editable-line-stroke-vector.jpg" alt="Globe" class="globe" />
 
-      <!-- Rotating text path -->
+      <!-- Rotating circular text -->
       <svg class="rotating-text" viewBox="0 0 500 500">
         <defs>
           <path id="circlePath"
@@ -41,7 +41,7 @@
                a 200,200 0 1,1 -400,0" />
         </defs>
         <text font-size="18" fill="black">
-          <textPath xlink:href="#circlePath" startOffset="0%">
+          <textPath href="#circlePath" startOffset="0%">
             • World Wide Web Walther • World Wide Walther Web • World Web Wide Walther • World Web Walther Wide • World Walther Wide Web • World Walther Web Wide • Wide World Web Walther • Wide World Walther Web • Wide Web World Walther • Wide Web Walther World • Wide Walther World Web • Wide Walther Web World • Web World Wide Walther • Web World Walther Wide • Web Wide World Walther • Web Wide Walther World • Web Walther World Wide • Web Walther Wide World • Walther World Wide Web • Walther World Web Wide • Walther Wide World Web • Walther Wide Web World • Walther Web World Wide • Walther Web Wide World
           </textPath>
         </text>
@@ -51,9 +51,9 @@
 
   <!-- Social Media Buttons -->
   <div class="social-buttons homepage-social">
-    <a class="social-btn" href="https://instagram.com/newellwalther" target="_blank">📷 Instagram</a>
-    <a class="social-btn" href="https://twitter.com/newellwalther" target="_blank">🐦 Twitter</a>
-    <a class="social-btn" href="https://wa.me/84339441925" target="_blank">💬 WhatsApp</a>
+    <a class="social-btn" href="https://instagram.com/newellwalther" target="_blank" rel="noopener">📷 Instagram</a>
+    <a class="social-btn" href="https://twitter.com/newellwalther" target="_blank" rel="noopener">🐦 Twitter</a>
+    <a class="social-btn" href="https://wa.me/84339441925" target="_blank" rel="noopener">💬 WhatsApp</a>
   </div>
 
   <!-- Footer -->
@@ -63,5 +63,6 @@
 
   <!-- Scripts -->
   <script src="menu.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
