Update exhibitions page: remove hover/fade, enlarge text, add On Purpose Gallery link

--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,17 @@
   </div>
 
   <header>
+    <!-- Social buttons at top -->
+    <div class="social-buttons top-social">
+      <a class="social-btn" href="https://instagram.com/newellwalther" target="_blank" aria-label="Instagram">📷</a>
+      <a class="social-btn" href="https://twitter.com/newellwalther" target="_blank" aria-label="Twitter">🐦</a>
+      <a class="social-btn" href="https://wa.me/84339441925" target="_blank" aria-label="WhatsApp">💬</a>
+    </div>
+
     <h1>Contact</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+    <p>Feel free to reach out through social media, email, or phone.</p>
+    <p><strong>Email:</strong> <a href="mailto:newell.pdx@gmail.com">newell.pdx@gmail.com</a></p>
+    <p><strong>Phone:</strong> <a href="tel:+84339441925">(+84) 339441925</a></p>
   </header>
 
   <main>
@@ -32,15 +41,11 @@
   </main>
 
   <footer>
-    <footer>
-  <div class="social-buttons footer-social">
-    <a class="social-btn" href="https://instagram.com/newellwalther" target="_blank" aria-label="Instagram">📷</a>
-    <a class="social-btn" href="https://twitter.com/newellwalther" target="_blank" aria-label="Twitter">🐦</a>
-    <a class="social-btn" href="https://wa.me/84339441925" target="_blank" aria-label="WhatsApp">💬</a>
-  </div>
-</footer>
-
-
+    <div class="social-buttons footer-social">
+      <a class="social-btn" href="https://instagram.com/newellwalther" target="_blank" aria-label="Instagram">📷</a>
+      <a class="social-btn" href="https://twitter.com/newellwalther" target="_blank" aria-label="Twitter">🐦</a>
+      <a class="social-btn" href="https://wa.me/84339441925" target="_blank" aria-label="WhatsApp">💬</a>
+    </div>
     © 2025 Walther. All rights reserved.
   </footer>
 
