--- a/exhibitions.html
+++ b/exhibitions.html
@@ -5,6 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Wash & Be Wash'd — Exhibitions</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    main {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 2rem;
+      font-family: Georgia, serif;
+      color: #111;
+    }
+
+    h2 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+
+    .exhibition {
+      margin-bottom: 2rem;
+      font-size: 1.25rem;
+      line-height: 1.6;
+    }
+
+    .exhibition strong {
+      display: block;
+      font-size: 1.5rem;
+      margin-bottom: 0.3rem;
+    }
+
+    a.exhibition-link {
+      color: #111;
+      text-decoration: underline;
+      font-weight: bold;
+    }
+
+    a.exhibition-link:hover {
+      color: #444;
+    }
+  </style>
 </head>
 <body>
   <div class="menu">
@@ -21,47 +59,54 @@
 
   <header>
     <h1>Exhibitions</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
   </header>
 
   <main>
-    <div class="wip-center">
-      <img src="wip.png" alt="Work in progress illustration" />
-      <div class="wip-text">WORK IN PROGRESS</div>
+    <h2>Solo Exhibitions: Painting</h2>
+
+    <div class="exhibition">
+      <strong>Wash & Be Wash’d & With Oil Anointed</strong>
+      PIPSQUEAK, Seattle, WA<br/>
+      Jan 22, 2016 – Mar 1, 2016
+    </div>
+
+    <div class="exhibition">
+      <strong>Cool Sun On Display</strong>
+      PARLIAMENT, Portland, OR<br/>
+      Oct 2, 2014 – Nov 2, 2014
+    </div>
+
+    <div class="exhibition">
+      <strong>
+        <a href="https://19933.biz/newell.html" target="_blank" class="exhibition-link">
+          Thy Dross to Consume, &amp; Thy Gold to Refine
+        </a>
+      </strong>
+      ON PURPOSE GALLERY, San Rafael, CA<br/>
+      Oct 1 – Oct 31, 2016
     </div>
   </main>
 
-  <footer>
-    <footer class="mt-12 py-6 border-t text-center text-gray-500">
-  <div class="flex justify-center space-x-6">
-    <!-- Instagram -->
-    <a href="https://instagram.com/newellwalther" target="_blank" rel="noopener noreferrer"
-       class="text-gray-500 hover:text-pink-500 transition">
-      <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-        <path d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2zM12 7a5 5 0 1 0 0 10a5 5 0 0 0 0-10zm6.5-.25a1.25 1.25 0 1 0-2.5 0a1.25 1.25 0 0 0 2.5 0z"/>
-      </svg>
-    </a>
-    <!-- Twitter -->
-    <a href="https://twitter.com/newellwalther" target="_blank" rel="noopener noreferrer"
-       class="text-gray-500 hover:text-blue-500 transition">
-      <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-        <path d="M19.633 7.997c.013.178.013.356.013.535c0 5.464-4.159 11.77-11.77 11.77c-2.34 0-4.515-.685-6.348-1.868c.324.037.636.05.973.05c1.943 0 3.73-.66 5.15-1.78c-1.818-.037-3.35-1.23-3.878-2.87c.255.038.51.063.778.063c.373 0 .747-.05 1.095-.14c-1.905-.386-3.338-2.065-3.338-4.084v-.05c.56.311 1.2.497 1.88.522c-1.13-.747-1.88-2.028-1.88-3.475c0-.772.21-1.48.572-2.097c2.066 2.54 5.15 4.197 8.63 4.384c-.074-.311-.111-.635-.111-.959c0-2.314 1.88-4.195 4.207-4.195c1.21 0 2.303.497 3.072 1.307c.96-.187 1.867-.535 2.678-1.008c-.311.973-.973 1.793-1.843 2.314c.847-.1 1.67-.324 2.428-.66a8.83 8.83 0 0 1-2.103 2.178z"/>
-      </svg>
-    </a>
-    <!-- WhatsApp -->
-    <a <footer>
-  <div class="social-buttons footer-social">
-    <a class="social-btn" href="https://instagram.com/newellwalther" target="_blank" aria-label="Instagram">📷</a>
-    <a class="social-btn" href="https://twitter.com/newellwalther" target="_blank" aria-label="Twitter">🐦</a>
-    <a class="social-btn" href="https://wa.me/84339441925" target="_blank" aria-label="WhatsApp">💬</a>
-  </div>
-</footer>
-
-    </a>
-  </div>
-</footer>
-
-    © 2025 Walther. All rights reserved.
+  <footer class="mt-12 py-6 border-t text-center text-gray-500">
+    <div class="flex justify-center space-x-6">
+      <!-- Instagram -->
+      <a href="https://instagram.com/newellwalther" target="_blank" rel="noopener noreferrer"
+         class="text-gray-500 hover:text-pink-500 transition">
+        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2zM12 7a5 5 0 1 0 0 10a5 5 0 0 0 0-10zm6.5-.25a1.25 1.25 0 1 0-2.5 0a1.25 1.25 0 0 0 2.5 0z"/>
+        </svg>
+      </a>
+      <!-- Twitter -->
+      <a href="https://twitter.com/newellwalther" target="_blank" rel="noopener noreferrer"
+         class="text-gray-500 hover:text-blue-500 transition">
+        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M19.633 7.997c.013.178.013.356.013.535c0 5.464-4.159 11.77-11.77 11.77c-2.34 0-4.515-.685-6.348-1.868c.324.037.636.05.973.05c1.943 0 3.73-.66 5.15-1.78c-1.818-.037-3.35-1.23-3.878-2.87c.255.038.51.063.778.063c.373 0 .747-.05 1.095-.14c-1.905-.386-3.338-2.065-3.338-4.084v-.05c.56.311 1.2.497 1.88.522c-1.13-.747-1.88-2.028-1.88-3.475c0-.772.21-1.48.572-2.097c2.066 2.54 5.15 4.197 8.63 4.384c-.074-.311-.111-.635-.111-.959c0-2.314 1.88-4.195 4.207-4.195c1.21 0 2.303.497 3.072 1.307c.96-.187 1.867-.535 2.678-1.008c-.311.973-.973 1.793-1.843 2.314c.847-.1 1.67-.324 2.428-.66a8.83 8.83 0 0 1-2.103 2.178z"/>
+        </svg>
+      </a>
+      <!-- WhatsApp -->
+      <a class="social-btn" href="https://wa.me/84339441925" target="_blank" aria-label="WhatsApp">💬</a>
+    </div>
+    <div class="mt-4">© 2025 Walther. All rights reserved.</div>
   </footer>
 
   <script src="menu.js"></script>
