Update globe icon and enlarge circling text

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <main>
     <div class="globe-container">
       <!-- Globe -->
-      <img src="images/world-icon-hand-drawn-illustration-editable-line-stroke-vector.jpg" alt="Globe" class="globe" />
+<img src="images/world-icon-hand-drawn-illustration-editable-line-stroke-vector.png" alt="Globe" class="globe" />
 
       <!-- Rotating circular text -->
       <svg class="rotating-text" viewBox="0 0 500 500">
