Update menu on all pages

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 <body>
   <!-- Menu -->
   <div class="menu">
-    <img src="menu-trigger.jpg" alt="Menu" class="menu-trigger" aria-label="Open site menu" />
+    <button class="menu-trigger" aria-label="Open site menu">MENU</button>
     <ul class="dropdown" role="menu">
       <li><a href="index.html">Home</a></li>
       <li><a href="paintings.html">Paintings</a></li>
       <li><a href="exhibitions.html">Exhibitions</a></li>
-      <li><a href="writing.html">Writing</a></li>
+      <li><a href="drawings.html">Drawings</a></li>
+      <li><a href="video.html">Video</a></li>
+      <li><a href="https://19933.biz/manhattanartcomic.html" target="_blank">🔗 Manhattan Art Comic</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
@@ -29,7 +31,7 @@
   <main>
     <div class="globe-container">
       <!-- Globe -->
-<img src="images/world-icon-hand-drawn-illustration-editable-line-stroke-vector.png" alt="Globe" class="globe" />
+      <img src="images/world-icon-hand-drawn-illustration-editable-line-stroke-vector.png" alt="Globe" class="globe" />
 
       <!-- Rotating circular text -->
       <svg class="rotating-text" viewBox="0 0 500 500">
