--- a/about.html
+++ b/about.html
@@ -8,17 +8,21 @@
 </head>
 <body>
   <!-- Menu -->
-  <div class="menu">
-    <img src="menu-trigger.jpg" alt="Menu" class="menu-trigger" aria-label="Open site menu" />
-    <ul class="dropdown" role="menu">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="paintings.html">Paintings</a></li>
-      <li><a href="exhibitions.html">Exhibitions</a></li>
-      <li><a href="writing.html">Writing</a></li>
-      <li><a href="about.html" class="active">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </div>
+  <!-- Menu -->
+<div class="menu">
+  <button class="menu-trigger" aria-label="Open site menu">MENU</button>
+  <ul class="dropdown" role="menu">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="paintings.html">Paintings</a></li>
+    <li><a href="exhibitions.html">Exhibitions</a></li>
+    <li><a href="drawings.html">Drawings</a></li>
+    <li><a href="video.html">Video</a></li>
+    <li><a href="https://19933.biz/manhattanartcomic.html" target="_blank">🔗 Manhattan Art Comic</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</div>
+
 
   <!-- Header -->
   <header class="page-header">
