--- a/exhibitions.html
+++ b/exhibitions.html
@@ -45,13 +45,16 @@
   </style>
 </head>
 <body>
+  <!-- ✅ Updated Site Menu -->
   <div class="menu">
-    <img src="menu-trigger.jpg" alt="Menu" class="menu-trigger" aria-label="Open site menu" />
+    <button class="menu-trigger" aria-label="Open site menu">MENU</button>
     <ul class="dropdown" role="menu">
       <li><a href="index.html">Home</a></li>
       <li><a href="paintings.html">Paintings</a></li>
       <li><a href="exhibitions.html">Exhibitions</a></li>
-      <li><a href="writing.html">Writing</a></li>
+      <li><a href="drawings.html">Drawings</a></li>
+      <li><a href="video.html">Video</a></li>
+      <li><a href="https://19933.biz/manhattanartcomic.html" target="_blank">🔗 Manhattan Art Comic</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
