Update exhibitions page: group & solo exhibitions ordered newest first

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -45,7 +45,7 @@
   </style>
 </head>
 <body>
-  <!-- ✅ Updated Site Menu -->
+  <!-- ✅ Site Menu -->
   <div class="menu">
     <button class="menu-trigger" aria-label="Open site menu">MENU</button>
     <ul class="dropdown" role="menu">
@@ -68,18 +68,6 @@
     <h2>Solo Exhibitions: Painting</h2>
 
     <div class="exhibition">
-      <strong>Wash & Be Wash’d & With Oil Anointed</strong>
-      PIPSQUEAK, Seattle, WA<br/>
-      Jan 22, 2016 – Mar 1, 2016
-    </div>
-
-    <div class="exhibition">
-      <strong>Cool Sun On Display</strong>
-      PARLIAMENT, Portland, OR<br/>
-      Oct 2, 2014 – Nov 2, 2014
-    </div>
-
-    <div class="exhibition">
       <strong>
         <a href="https://19933.biz/newell.html" target="_blank" class="exhibition-link">
           Thy Dross to Consume, &amp; Thy Gold to Refine
@@ -87,6 +75,26 @@
       </strong>
       ON PURPOSE GALLERY, San Rafael, CA<br/>
       Oct 1 – Oct 31, 2016
+    </div>
+
+    <div class="exhibition">
+      <strong>Wash & Be Wash’d & With Oil Anointed</strong>
+      PIPSQUEAK, Seattle, WA<br/>
+      Jan 22, 2016 – Mar 1, 2016
+    </div>
+
+    <h2>Group Exhibitions</h2>
+
+    <div class="exhibition">
+      <strong>All animals are equal</strong>
+      A. Farm, Ho Chi Minh City, Vietnam<br/>
+      2018
+    </div>
+
+    <div class="exhibition">
+      <strong>Cool Sun On Display</strong>
+      PARLIAMENT, Portland, OR<br/>
+      Oct 2, 2014 – Nov 2, 2014
     </div>
   </main>
 
