Update paintings page with R2 gallery

--- a/paintings.html
+++ b/paintings.html
@@ -7,50 +7,43 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Menu -->
-<div class="menu">
-  <button class="menu-trigger" aria-label="Open site menu">MENU</button>
-  <ul class="dropdown" role="menu">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="paintings.html">Paintings</a></li>
-    <li><a href="exhibitions.html">Exhibitions</a></li>
-    <li><a href="drawings.html">Drawings</a></li>
-    <li><a href="video.html">Video</a></li>
-    <li><a href="https://19933.biz/manhattanartcomic.html" target="_blank">🔗 Manhattan Art Comic</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</div>
 
+  <!-- Menu -->
+  <div class="menu">
+    <button class="menu-trigger" aria-label="Open site menu">MENU</button>
+    <ul class="dropdown" role="menu">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="paintings.html">Paintings</a></li>
+      <li><a href="exhibitions.html">Exhibitions</a></li>
+      <li><a href="drawings.html">Drawings</a></li>
+      <li><a href="video.html">Video</a></li>
+      <li><a href="https://19933.biz/manhattanartcomic.html" target="_blank">🔗 Manhattan Art Comic</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </div>
 
   <header>
     <h1>Paintings</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+    <p>Please enjoy this growing archive of works.</p>
   </header>
 
+  <!-- IMAGE GALLERY SECTION -->
   <main>
-    <div class="wip-center">
-      <img src="wip.png" alt="Work in progress illustration" />
-      <div class="wip-text">WORK IN PROGRESS</div>
-    </div>
-  </main>
 
-  <footer>
-    <footer class="mt-12 py-6 border-t text-center text-gray-500">
-  <div class="flex justify-center space-x-6">
-   
-</footer>
-<footer>
-  <div class="social-buttons footer-social">
-    <a class="social-btn" href="https://instagram.com/newellwalther" target="_blank" aria-label="Instagram">📷</a>
-    <a class="social-btn" href="https://twitter.com/newellwalther" target="_blank" aria-label="Twitter">🐦</a>
-    <a class="social-btn" href="https://wa.me/84339441925" target="_blank" aria-label="WhatsApp">💬</a>
-  </div>
-</footer>
+    <section class="gallery">
+      <h2>Works</h2>
+      <div class="gallery-grid">
 
-    © 2025 Walther. All rights reserved.
-  </footer>
-
-  <script src="menu.js"></script>
-</body>
-</html>
+        <!-- Replace these filenames with your actual R2 filenames -->
+        <img src="https://pub-c7202c315ad94697823c64022db4c1fd.r2.dev/100-paintings/IMAGE1.jpg" alt="">
+        <img src="https://pub-c7202c315ad94697823c64022db4c1fd.r2.dev/100-paintings/IMAGE2.jpg" alt="">
+        <img src="https://pub-c7202c315ad94697823c64022db4c1fd.r2.dev/100-paintings/IMAGE3.jpg" alt="">
+        <img src="https://pub-c7202c315ad94697823c64022db4c1fd.r2.dev/100-paintings/IMAGE4.jpg" alt="">
+        <img src="https://pub-c7202c315ad94697823c64022db4c1fd.r2.dev/100-paintings/IMAGE5.jpg" alt="">
+        <img src="https://pub-c7202c315ad94697823c64022db4c1fd.r2.dev/100-paintings/IMAGE6.jpg" alt="">
+        <img src="https://pub-c7202c315ad94697823c64022db4c1fd.r2.dev/100-paintings/IMAGE7.jpg" alt="">
+        <img src="https://pub-c7202c315ad94697823c64022db4c1fd.r2.dev/100-paintings/IMAGE8.jpg" alt="">
+        <img src="https://pub-c7202c315ad94697823c64022db4c1fd.r2.dev/100-paintings/IMAGE9.jpg" alt="">
+        <img src="https://pub-c7202c315ad94697823c64022db4c1fd.r2.dev/100-paintings/IMAGE10.jpg" alt="">
+        <img src="https://pub-c7202c
